infra/applications/core/deployment.yaml
#kubectl apply -f ./core/deployment.yaml
#kubectl get deployments

apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  labels:
    component: core-deployment #definir label que usaremos como selector
spec:
  replicas: 3
  selector:
    matchLabels:
      component: core-deployment
  strategy:
    rollingUpdate: #mantiene la app antigua viva hasta que la nueva esté activa
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: core-deployment
      spec: #
        containers:
          - env:
              - name: SPRING_DATASOURCE_URL
                value: 'jdbc:mariadb://mariadb-service.default.svc.cluster.local:3306/shrtdb' #
            image: cristinapicatoste/monolith:latest
            imagePullPolicy: IfNotPresent
            livenessProbe:
              failureThreshold: 3
              initialDeplaySeconds: 20
              periodSeconds: 20
              successThreshold: 1
              tcpSocket:
                port: 8080
              timeoutSeconds: 5
          - name: core-deployment
            image: mariadb:10.3
            ports:
              - containerPort: 8080
                name: 8080tcp
                protocol: TCP
            readinessProbe:
              failureThreshold: 14
              initialDeplaySeconds: 48
              periodSeconds: 10
              successThreshold: 1
              tcpSocket:
                port: 8080
              timeoutSeconds: 5
            resources: # recursos que quermos dedicar al cluster, sirve para particionar los nodos. Está dentro del contenedor
              limits:
                memory: 500Mi
              requests:
                cpu: 200m
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
